--- a/css/contents.css
+++ b/css/contents.css
@@ -39,338 +39,256 @@
 	position: absolute;
 }
 
-.floating-gallery li:nth-child(1) img {
-	width: 180px;
-}
-
-.floating-gallery li:nth-child(2) img {
-	width: 230px;
-}
-
-.floating-gallery li:nth-child(3) img {
-	width: 180px;
-}
-
-.floating-gallery li:nth-child(4) img {
-	width: 200px;
-}
-
-.floating-gallery li:nth-child(5) img {
-	width: 230px;
-}
-
-.floating-gallery li:nth-child(6) img {
-	width: 220px;
-}
-
-.floating-gallery li:nth-child(7) img {
-	width: 190px;
-}
-
-.floating-gallery li:nth-child(8) img {
-	width: 190px;
-}
-
-.floating-gallery li:nth-child(9) img {
-	width: 220px;
-}
-
-.floating-gallery li:nth-child(10) img {
-	width: 205px;
-}
-
-.floating-gallery li:nth-child(11) img {
-	width: 220px;
-}
-
-.floating-gallery li:nth-child(12) img {
-	width: 205px;
-}
-
-.floating-gallery li:nth-child(13) img {
-	width: 185px;
-}
-
-.floating-gallery li:nth-child(14) img {
-	width: 210px;
-}
-
-.floating-gallery li:nth-child(15) img {
-	width: 230px;
-}
-
-.floating-gallery li:nth-child(16) img {
-	width: 220px;
-}
-
-.floating-gallery li:nth-child(17) img {
-	width: 220px;
-}
-
-.floating-gallery li:nth-child(18) img {
-	width: 237px;
-}
-
-.floating-gallery li:nth-child(19) img {
-	width: 193px;
-}
-
-.floating-gallery li:nth-child(20) img {
-	width: 213px;
-}
-
-.floating-gallery li:nth-child(21) img {
-	width: 240px;
-}
-
-.floating-gallery li:nth-child(22) img {
-	width: 222px;
-}
-
-.floating-gallery li:nth-child(23) img {
-	width: 222px;
-}
-
-.floating-gallery li:nth-child(24) img {
-	width: 214px;
-}
-
-.floating-gallery li:nth-child(25) img {
-	width: 218px;
-}
-
-.floating-gallery li:nth-child(26) img {
-	width: 192px;
-}
-
-.floating-gallery li:nth-child(27) img {
-	width: 234px;
-}
-
-.floating-gallery li:nth-child(28) img {
-	width: 218px;
-}
-
-.floating-gallery li:nth-child(29) img {
-	width: 198px;
-}
-
-.floating-gallery li:nth-child(30) img {
-	width: 184px;
-}
-
-.floating-gallery li:nth-child(31) img {
-	width: 238px;
-}
-
-.floating-gallery li:nth-child(32) img {
-	width: 239px;
-}
-
-.floating-gallery li:nth-child(33) img {
-	width: 240px;
-}
-
-.floating-gallery li:nth-child(34) img {
-	width: 204px;
-}
-
-.floating-gallery li:nth-child(35) img {
-	width: 248px;
-}
-
-.floating-gallery li:nth-child(36) img {
-	width: 220px;
-}
-
-.floating-gallery li:nth-child(37) img {
-	width: 220px;
-}
-
-.floating-gallery li:nth-child(38) img {
-	width: 237px;
-}
-
-.floating-gallery li:nth-child(39) img {
-	width: 193px;
-}
-
-.floating-gallery li:nth-child(40) img {
-	width: 213px;
-}
-
 
 .floating-gallery img {
 	height: auto;
 	border-radius: 2px;
 	object-fit: cover;
-	opacity: 0.7;
+	opacity: 0.4;
 	filter: brightness(1.1);
 	box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+	border-radius: 20px;
 }
+
+
+.floating-gallery li:nth-child(1) img {
+	width: 215px;
+}
+
+.floating-gallery li:nth-child(2) img {
+	width: 220px;
+}
+
+.floating-gallery li:nth-child(3) img {
+	width: 245px;
+}
+
+.floating-gallery li:nth-child(4) img {
+	width: 230px;
+}
+
+.floating-gallery li:nth-child(5) img {
+	width: 450px;
+	box-shadow: 0 8px 20px rgba(0, 0, 0, 0);
+	opacity: 0.15;
+}
+
+.floating-gallery li:nth-child(6) img {
+	width: 285px;
+}
+
+.floating-gallery li:nth-child(7) img {
+	width: 285px;
+}
+
+.floating-gallery li:nth-child(8) img {
+	width: 250px;
+	box-shadow: 0 8px 20px rgba(0, 0, 0, 0);
+	opacity: 0.35;
+}
+
+.floating-gallery li:nth-child(9) img {
+	width: 285px;
+}
+
+.floating-gallery li:nth-child(10) img {
+	width: 290px;
+}
+
+.floating-gallery li:nth-child(11) img {
+	width: 310px;
+	box-shadow: 0 8px 20px rgba(0, 0, 0, 0);
+}
+
+.floating-gallery li:nth-child(12) img {
+	width: 266px;
+}
+
+.floating-gallery li:nth-child(13) img {
+	width: 260px;
+}
+
+.floating-gallery li:nth-child(14) img {
+	width: 273px;
+}
+
+.floating-gallery li:nth-child(15) img {
+	width: 320px;
+	border-radius: 20px;
+}
+
+.floating-gallery li:nth-child(16) img {
+	width: 270px;
+}
+
+.floating-gallery li:nth-child(17) img {
+	width: 350px;
+	box-shadow: 0 8px 20px rgba(0, 0, 0, 0);
+}
+
+.floating-gallery li:nth-child(18) img {
+	width: 275px;
+}
+
+.floating-gallery li:nth-child(19) img {
+	width: 270px;
+}
+
+.floating-gallery li:nth-child(20) img {
+	width: 222px;
+}
+
+.floating-gallery li:nth-child(21) img {
+	width: 600px;
+	opacity: 0.1;
+}
+
+.floating-gallery li:nth-child(22) img {
+	width: 265px;
+}
+
+.floating-gallery li:nth-child(23) img {
+	width: 288px;
+}
+
+.floating-gallery li:nth-child(24) img {
+	width: 300px;
+}
+
+.floating-gallery li:nth-child(25) img {
+	width: 325px;
+}
+
+.floating-gallery li:nth-child(26) img {
+	width: 265px;
+}
+
+.floating-gallery li:nth-child(27) img {
+	width: 285px;
+}
+
+.floating-gallery li:nth-child(28) img {
+	width: 600px;
+	box-shadow: 0 8px 20px rgba(0, 0, 0, 0);
+	opacity: 0.1;
+}
+
+
 
 /* ===============================
    animation時間の個別設定
 ================================ */
 
 .floating-gallery li:nth-child(1) {
-	transition-duration: 0.6s;
+	transition-duration: 0.42s;
 }
 
 .floating-gallery li:nth-child(2) {
-	transition-duration: 0.45s;
+	transition-duration: 0.29s;
 }
 
 .floating-gallery li:nth-child(3) {
-	transition-duration: 0.8s;
+	transition-duration: 0.54s;
 }
 
 .floating-gallery li:nth-child(4) {
-	transition-duration: 0.5s;
+	transition-duration: 0.33s;
 }
 
 .floating-gallery li:nth-child(5) {
-	transition-duration: 0.75s;
+	transition-duration: 0.48s;
 }
 
 .floating-gallery li:nth-child(6) {
-	transition-duration: 0.65s;
+	transition-duration: 0.40s;
 }
 
 .floating-gallery li:nth-child(7) {
-	transition-duration: 0.9s;
+	transition-duration: 0.60s;
 }
 
 .floating-gallery li:nth-child(8) {
-	transition-duration: 0.55s;
+	transition-duration: 0.31s;
 }
 
 .floating-gallery li:nth-child(9) {
-	transition-duration: 0.7s;
+	transition-duration: 0.45s;
 }
 
 .floating-gallery li:nth-child(10) {
-	transition-duration: 0.4s;
+	transition-duration: 0.25s;
 }
 
 .floating-gallery li:nth-child(11) {
-	transition-duration: 0.85s;
-}
-
-.floating-gallery li:nth-child(12) {
-	transition-duration: 0.5s;
-}
-
-.floating-gallery li:nth-child(13) {
-	transition-duration: 0.6s;
-}
-
-.floating-gallery li:nth-child(14) {
-	transition-duration: 0.75s;
-}
-
-.floating-gallery li:nth-child(15) {
-	transition-duration: 0.55s;
-}
-
-.floating-gallery li:nth-child(16) {
-	transition-duration: 0.63s;
-}
-
-.floating-gallery li:nth-child(17) {
-	transition-duration: 0.72s;
-}
-
-.floating-gallery li:nth-child(18) {
-	transition-duration: 0.58s;
-}
-
-.floating-gallery li:nth-child(19) {
-	transition-duration: 0.77s;
-}
-
-.floating-gallery li:nth-child(20) {
-	transition-duration: 0.61s;
-}
-
-.floating-gallery li:nth-child(21) {
-	transition-duration: 0.67s;
-}
-
-.floating-gallery li:nth-child(22) {
-	transition-duration: 0.53s;
-}
-
-.floating-gallery li:nth-child(23) {
-	transition-duration: 0.70s;
-}
-
-.floating-gallery li:nth-child(24) {
-	transition-duration: 0.64s;
-}
-
-.floating-gallery li:nth-child(25) {
-	transition-duration: 0.60s;
-}
-
-.floating-gallery li:nth-child(26) {
-	transition-duration: 0.69s;
-}
-
-.floating-gallery li:nth-child(27) {
-	transition-duration: 0.56s;
-}
-
-.floating-gallery li:nth-child(28) {
-	transition-duration: 0.73s;
-}
-
-.floating-gallery li:nth-child(29) {
 	transition-duration: 0.62s;
 }
 
-.floating-gallery li:nth-child(30) {
-	transition-duration: 0.66s;
+.floating-gallery li:nth-child(12) {
+	transition-duration: 0.34s;
 }
 
-.floating-gallery li:nth-child(31) {
+.floating-gallery li:nth-child(13) {
+	transition-duration: 0.41s;
+}
+
+.floating-gallery li:nth-child(14) {
+	transition-duration: 0.50s;
+}
+
+.floating-gallery li:nth-child(15) {
+	transition-duration: 0.36s;
+}
+
+.floating-gallery li:nth-child(16) {
+	transition-duration: 0.43s;
+}
+
+.floating-gallery li:nth-child(17) {
+	transition-duration: 0.52s;
+}
+
+.floating-gallery li:nth-child(18) {
+	transition-duration: 0.39s;
+}
+
+.floating-gallery li:nth-child(19) {
 	transition-duration: 0.57s;
 }
 
-.floating-gallery li:nth-child(32) {
-	transition-duration: 0.74s;
+.floating-gallery li:nth-child(20) {
+	transition-duration: 0.44s;
 }
 
-.floating-gallery li:nth-child(33) {
-	transition-duration: 0.59s;
+.floating-gallery li:nth-child(21) {
+	transition-duration: 0.49s;
 }
 
-.floating-gallery li:nth-child(34) {
-	transition-duration: 0.71s;
+.floating-gallery li:nth-child(22) {
+	transition-duration: 0.30s;
 }
 
-.floating-gallery li:nth-child(35) {
-	transition-duration: 0.65s;
+.floating-gallery li:nth-child(23) {
+	transition-duration: 0.46s;
 }
 
-.floating-gallery li:nth-child(36) {
-	transition-duration: 0.64s;
+.floating-gallery li:nth-child(24) {
+	transition-duration: 0.35s;
 }
 
-.floating-gallery li:nth-child(37) {
-	transition-duration: 0.60s;
+.floating-gallery li:nth-child(25) {
+	transition-duration: 0.43s;
 }
 
-.floating-gallery li:nth-child(38) {
-	transition-duration: 0.69s;
+.floating-gallery li:nth-child(26) {
+	transition-duration: 0.52s;
 }
 
-.floating-gallery li:nth-child(39) {
-	transition-duration: 0.56s;
+.floating-gallery li:nth-child(27) {
+	transition-duration: 0.49s;
 }
 
-.floating-gallery li:nth-child(40) {
-	transition-duration: 0.73s;
+.floating-gallery li:nth-child(28) {
+	transition-duration: 0.49s;
 }
 
 .floating-gallery li {
@@ -387,7 +305,7 @@
 	top: 100%;
 	left: 0;
 	width: 100%;
-	height: 100vh;
+	height: 80vh;
 	overflow: hidden;
 	z-index: 1;
 	pointer-events: none;
@@ -531,6 +449,17 @@ a.theme-yellow-text:hover {
 	background-color: #b28e29;
 	color: white;
 }
+
+a.theme-gold-text {
+	border: solid 1px #d4af37;
+	color: #d4af37;
+}
+
+a.theme-gold-text:hover {
+	background-color: #d4af37;
+	color: white;
+}
+
 
 
 /* ===============================
