--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,6 @@
 .footer-section {
 	background: #fff;
 	text-align: center;
-	border-top: 1px solid #ddd;
 	overflow: hidden;
 	display: flex;
 	flex-direction: column;
@@ -125,7 +124,6 @@
 .footer-bottom-area {
 	background: #000;
 	color: #fff;
-	padding: 60px 20px 40px;
 	border-top: 1px solid #333;
 }
 
@@ -135,7 +133,8 @@
 	gap: 20px;
 	font-size: 0.9rem;
 	font-weight: 600;
-	margin-bottom: 30px;
+	margin-bottom: 20px;
+	margin-top: 20px;
 }
 
 .footer-nav a {
