--- a/css/contents.css
+++ b/css/contents.css
@@ -401,7 +401,7 @@ section.service-hero {
 
 /* 色テーマ別ボタン */
 a.theme-blue-text {
-	border: solid 1px #337aa6;
+	border: solid 5px #337aa6;
 	color: #337aa6;
 }
 
@@ -411,7 +411,7 @@ a.theme-blue-text:hover {
 }
 
 a.theme-red-text {
-	border: solid 1px #b34343;
+	border: solid 5px #b34343;
 	color: #b34343;
 }
 
@@ -421,7 +421,7 @@ a.theme-red-text:hover {
 }
 
 a.theme-purple-text {
-	border: solid 1px #6a39a2;
+	border: solid 5px #6a39a2;
 	color: #6a39a2;
 }
 
@@ -431,7 +431,7 @@ a.theme-purple-text:hover {
 }
 
 a.theme-green-text {
-	border: solid 1px #3a8154;
+	border: solid 5px #3a8154;
 	color: #3a8154;
 }
 
@@ -441,7 +441,7 @@ a.theme-green-text:hover {
 }
 
 a.theme-yellow-text {
-	border: solid 1px #b28e29;
+	border: solid 5px #b28e29;
 	color: #b28e29;
 }
 
@@ -451,7 +451,7 @@ a.theme-yellow-text:hover {
 }
 
 a.theme-gold-text {
-	border: solid 1px #d4af37;
+	border: solid 5px #d4af37;
 	color: #d4af37;
 }
 
@@ -500,9 +500,24 @@ a.theme-gold-text:hover {
 /* ===============================
    レスポンシブ対応
 ================================ */
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
+	.service-inner{
+		max-width: 1000px;
+	}
+	
 	.service-inner h1 {
-		font-size: 2rem;
+		font-size: 4.5rem;
+		max-width: 1000px;
+	}
+
+	.service-button {
+		padding: 0.7em 1.8em;
+		font-size: 3rem;
+		margin-top: 60px;
+	}
+
+	section.service-hero {
+		min-height: 50vh;
 	}
 
 	.lead,
