--- a/css/footer.css
+++ b/css/footer.css
@@ -170,19 +170,24 @@
 	color: #999;
 }
 
-a {
+button {
 	color: inherit;
-	text-decoration: none;
+	background: none;
+	border: none;
+	padding: 0;
+	font: inherit;
+	text-align: inherit;
+	appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
 }
 
-a:visited {
+button:focus,
+button:active {
+	outline: none;
 	color: inherit;
 }
 
-a:hover,
-a:active {
-	color: inherit;
-}
 
 
 @media (max-width: 1024px) {
